--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@google-ai/generativelanguage": "^3.4.0",
     "@google/genai": "^1.22.0",
     "@google/generative-ai": "^0.24.1",
