--- a/server/.env
+++ b/server/.env
@@ -7,5 +7,6 @@ DB_PORT=26490
 JWT_SECRET=12345678
 PORT=26490
 GEMINI_API_KEY=AIzaSyCwUH_lTuCprrUdRdBIGtb5eg35f85rV-Y
-EMAIL_USER=lemu2005@yahoo.com
-EMAIL_PASS=yytg atjy susy ewth
+CLIENT_URL=http://localhost:5173
+NODE=PRODUCTION
+
