--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^1.22.0",
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
